<resources>
    <string name="app_name">EcliBot v.1.01</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_train">Fun Room</string>
    <string name="btn_learn">Learn</string>
    <string name="btn_manual">Manual</string>
    <string name="txt_main">EcliBot</string>

    <string name="trn_mode">Train Mode</string>
    <string name="trn_hel">Help</string>
    <string name="trn_for">Forward</string>
    <string name="trn_left">Left</string>
    <string name="trn_right">Right</string>
    <string name="trn_bac">Backward</string>
    <string name="trn_col">Colour</string>
    <string name="trn_buz">Buzzer</string>
    <string name="trn_tem">Temperature</string>
    <string name="trn_dis">Disconnect</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_led_control">ledControl</string>

    <string name="btn1">Hidden</string>
    <string name="btn_move">Move...</string>
    <string name="btn_forward">Forward</string>
    <string name="btn_backward">Backward</string>
    <string name="btn_left">Left</string>
    <string name="btn_right">Right</string>
    <string name="btn_action">Action...</string>
    <string name="btn_inter">Interaction...</string>
    <string name="btn_exit"><![CDATA[<---]]></string>
    <string name="btn_col">Colour</string>
    <string name="btn_buzz">Buzzer</string>
    <string name="btn_repeat">Repeat</string>
    <string name="btn_if">If</string>
    <string name="btn_ifnot">If Not</string>
    <string name="btn_red">Red</string>
    <string name="btn_green">Green</string>
    <string name="btn_blue">Blue</string>
    <string name="btn_nocolour">No Colour</string>
    <string name="btn_buzzOn">Buzzer On</string>
    <string name="btn_buzzOff">Buzzer Off</string>
    <string name="btn_play">Play</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_help">Help</string>
    <string name="btn_view_if">End If</string>
    <string name="btn_end_repeat">Finish</string>
    <string name="btn_if_red">If Red</string>
    <string name="btn_if_green">If Green</string>
    <string name="btn_if_blue">If Blue</string>
    <string name="btn_if_no_colour">If No Colour</string>
    <string name="btn_if_buzz_on">If Buzzer On</string>
    <string name="btn_if_buzz_off">If Buzzer Off</string>
    <string name="welcome">EcliBot v. 1.01</string>
    <string name="bt_image">Bluetooth Image</string>
    <string name="power_on_image">Green Power On Button</string>
    <string name="AlphaBot_img">AlphaBot Image</string>
    <string name="welcome_to_eclibot">Welcome to EcliBot</string>
    <string name="exit_application">Exit Application</string>
    <string name="accept">ACCEPT</string>
    <string name="choose_the_number_of_iteration">Choose the number of iteration</string>
    <string name="dialog_content">Number Picker starts</string>


    <string-array name="repeatNo">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <string-array name="colours">
        <item>No Colour</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
</resources>
