<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#673AB7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_hidden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/btn1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/ic_play" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/ic_redo" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/ic_help" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#673AB7" />

        <LinearLayout
            android:id="@+id/lay_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#673AB7"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/btn_move"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="0dp"
                android:maxHeight="0dp"
                android:text="@string/btn_move" />

            <Button
                android:id="@+id/btn_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_action" />

            <Button
                android:id="@+id/btn_inter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_inter"
                android:textSize="8sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_move"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/lay_menu"
            android:background="#673AB7"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_forward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_forward"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_backward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_backward"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_left" />

            <Button
                android:id="@+id/btn_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_right" />

            <Button
                android:id="@+id/btn_col"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_col" />

            <Button
                android:id="@+id/btn_buz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_buzz" />

            <Button
                android:id="@+id/btn_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_repeat" />

            <Button
                android:id="@+id/btn_if"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_if" />

            <Button
                android:id="@+id/btn_ifnot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_ifnot"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_exit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_third"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/lay_move"
            android:background="#673AB7"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_red" />

            <Button
                android:id="@+id/btn_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_green" />

            <Button
                android:id="@+id/btn_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_blue" />

            <Button
                android:id="@+id/btn_nocolour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_nocolour"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_buzzOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_buzzOn"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_buzzOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_buzzOff"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_if_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_if_red" />

            <Button
                android:id="@+id/btn_if_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_if_green" />

            <Button
                android:id="@+id/btn_if_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_if_blue" />

            <Button
                android:id="@+id/btn_if_no_colour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_if_no_colour" />

            <Button
                android:id="@+id/btn_if_buzz_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_if_buzz_on" />

            <Button
                android:id="@+id/btn_if_buzz_off"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_if_buzz_off" />

            <Button
                android:id="@+id/btn_exit2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_exit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/lay_third"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>