<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context="com.example.test.MenuActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_eclibot"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_train"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_learn"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_train" />

    <Button
        android:id="@+id/btn_learn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btn_learn" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="#7A1E3E"
        android:text="@string/exit_application"
        android:textColor="#0C0B0C" />

</RelativeLayout>
