<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.test.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:contentDescription="@string/bt_image"
        app:srcCompat="@drawable/bt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/my_gradient"
        android:backgroundTint="#4CAF50"
        android:contentDescription="@string/power_on_image"
        app:srcCompat="@drawable/ic_power_on" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:layout_below="@id/imageButton"
        android:contentDescription="@string/AlphaBot_img"
        app:srcCompat="@drawable/alphabot" />

</RelativeLayout>
